tests/NormalTests/paczka1/small_fuzzy/96361029.err
Error in line 5: A721 A646 267,8
Error in line 8: A721 A543 27,0
Error in line 9: f4midclRz A721 6,1
